add biodata index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Halo
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        body { font-family: sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; padding: 50px; }
+        .card { background: white; padding: 25px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 400px; text-align: center; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
+        th { background-color: #007bff; color: white; border-radius: 5px 5px 0 0; }
+        img { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 4px solid #007bff; }
+        .title { color: #333; margin-top: 15px; }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Ganteng">
+        <h2 class="title">Biodata Saya</h2>
+        <table>
+            <tr><th>Kategori</th><th>Keterangan</th></tr>
+            <tr><td>Nama</td><td>Edwin Kurniawan</td></tr>
+            <tr><td>Umur</td><td>17 Tahun</td></tr>
+            <tr><td>Tempat Lahir</td><td>Asli Jember</td></tr>
+            <tr><td>Hobi</td><td>Mengaji</td></tr>
+        </table>
+    </div>
+</body>
+</html>
