--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Halo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Biodata | Izzul Islam Ramadhan</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      font-family: 'Poppins', sans-serif;
+
+      /* gradient background */
+      background: linear-gradient(135deg, #667eea, #764ba2);
+
+      /* center card */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .card {
+      background: #ffffff;
+      width: 90%;
+      max-width: 420px;
+      padding: 30px;
+      border-radius: 14px;
+      text-align: center;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+
+      /* hover animation */
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 18px 35px rgba(0, 0, 0, 0.25);
+    }
+
+    h1 {
+      margin-bottom: 10px;
+      font-weight: 600;
+      color: #2d2d2d;
+    }
+
+    .name {
+      color: #667eea;
+      font-weight: 600;
+      font-size: 18px;
+    }
+
+    p {
+      margin: 6px 0;
+      color: #555;
+      font-size: 14px;
+    }
+
+    footer {
+      margin-top: 20px;
+      font-size: 12px;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="card">
+    <h1>👋 Hello!</h1>
+    <p class="name">Izzul Islam Ramadhan</p>
+    <p>Informatics Student</p>
+    <p>Learning DevOps & Web Server</p>
+    <p>Debian • Apache2 • SSH</p>
+
+    <footer>
+      © 2026 | Simple Web Project
+    </footer>
+  </div>
+
+</body>
+</html>
+
