--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="nav-buttons">
         <button class="my-btn" onclick="window.location.href='izzul.html';">Izzul Page</button>
         <button class="my-btn">Edwin Page</button>
-        <button class="my-btn">Diega Page</button>
+        <button class="my-btn" onclick="window.location.href='dega.html';">Diega Page</button>
         <button class="my-btn">Bima Page</button>
       </div>
     </header>
